Fix font weight for b/strong wrapped content on Chrome

--- a/assets/sass/elements.scss
+++ b/assets/sass/elements.scss
@@ -169,6 +169,7 @@ Content (_elements.scss)
 b,
 strong {
 	font-weight: bold;
+	-webkit-font-smoothing: antialiased;
 }
 dfn,
 cite,
